--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,7 +1,7 @@
 <div class="login">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="home" class="button button-clear button-icon icon ion-arrow-left-c"></button>
-    <h1 class="title">Earlybird</h1>
+    <h1 class="title">earlybird</h1>
     <button ng-click="login()" class="button button-clear">Log In</button>
   </ion-header-bar>
 
