--- a/www/views/onboarding.html
+++ b/www/views/onboarding.html
@@ -1,15 +1,19 @@
 <div class="onboarding">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="home" class="button button-clear button-icon icon ion-arrow-left-c"></button>
-    <h1 class="title">Earlybird</h1>
+    <h1 class="title">earlybird</h1>
   </ion-header-bar>
 
   <ion-content scroll="false">
     <ion-slide-box class="onboarding-slider">
       <ion-slide ng-repeat="slide in onboardingSlides">
-        <img ng-src="{{slide.image}}"></img>
-        <h1>{{slide.title}}</h1>
-        <p>{{slide.description}}</p>
+        <div class="two-third-screen">
+          <img ng-src="{{slide.image}}"></img>
+        </div>
+        <div class="one-third-screen">
+          <h1>{{slide.title}}</h1>
+          <p>{{slide.description}}</p>
+        </div>
       </ion-slide>
     </ion-slide-box>
   </ion-content>
