--- a/www/views/register.html
+++ b/www/views/register.html
@@ -1,7 +1,7 @@
 <div class="register">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="onboarding" class="button button-clear button-icon icon ion-arrow-left-c"></button>
-    <h1 class="title">Earlybird</h1>
+    <h1 class="title">earlybird</h1>
     <button ng-click="register()" class="button button-clear">Register</button>
   </ion-header-bar>
 
