--- a/www/views/home.html
+++ b/www/views/home.html
@@ -3,7 +3,7 @@
     <div class="home-text">
       <h1>earlybird</h1>
       <h2>coffee when you want it</h2>
-      <a ui-sref="login">Already have an account?</a>
+      <a nav-direction="forward" ui-sref="login">Already have an account?</a>
     </div>
   </ion-content>
 
