--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -1,11 +1,25 @@
-<div class="modal">
-  <header class="bar bar-header">
-    <button class="button button-clear" ng-click="modal.hide()">Cancel</button>
+<ion-modal-view ng-init="newAddress={}">
+  <ion-header-bar>
+    <button class="button button-clear" ng-click="addressModal.hide()">Cancel</button>
     <h1 class="title">Add Address</h1>
-    <button class="button button-clear" ng-click="modal.hide()">Add</button>
-  </header>
+    <button ng-disabled="newAddress.form.$invalid" class="button button-clear" ng-click="modal.hide()">Add</button>
+  </ion-header-bar>
 
-  <content has-header="true" padding="true">
-    <p>This is a modal</p>
-  </content>
-</div>
+  <ion-content scroll="false">
+    <form name="newAddress.form" class="list">
+      <label class="item item-input">
+        <input type="text" required ng-model="newAddress.title" placeholder="Address nickname">
+      </label>
+
+      <label class="item item-input">
+        <input type="text" required ng-model="newAddress.street1" placeholder="Street">
+      </label>
+
+      <label class="item item-input">
+        <input type="text" required ng-model="newAddress.city" placeholder="City">
+        <input type="text" required ng-model="newAddress.state" placeholder="State">
+        <input type="text" required ng-model"newAddress.zip" placeholder="Zip">
+      </label>
+    </form>
+  </ion-content>
+</ion-modal-view>
