--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,3 +24,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+fieldset {
+  margin: 0px;
+  padding: 0px;
+  border: none;
+}
