--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,14 @@
-/* Earlybird specific css */
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
+*/
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+.ng-hide-add, .ng-hide-remove {
+  display: none !important;
+}
 
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
