--- a/www/views/sharing.html
+++ b/www/views/sharing.html
@@ -1,7 +1,7 @@
 <div class="sharing">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="order" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
-    <h1 class="title"></h1>
+    <h1 class="title">Sharing</h1>
   </ion-header-bar>
 
   <ion-content scroll="false">
