feat(session): resolve session on each route

--- a/www/views/home.html
+++ b/www/views/home.html
@@ -3,11 +3,11 @@
     <div class="home-text">
       <h1>earlybird</h1>
       <h2>coffee when you want it</h2>
-      <a nav-direction="forward" ui-sref="login">Already have an account?</a>
+      <a nav-direction="forward" ui-sref="earlybird.login">Already have an account?</a>
     </div>
   </ion-content>
 
-  <ion-footer-bar nav-direction="forward" ui-sref="onboarding" class="bar-assertive" align-title="center">
+  <ion-footer-bar nav-direction="forward" ui-sref="earlybird.onboarding" class="bar-assertive" align-title="center">
     <div class="title">Get Started</div>
   </ion-footer-bar>
 </div>
