--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,16 +1,16 @@
 <div class="login">
   <ion-header-bar class="bar-assertive">
-    <button nav-direction="back" ui-sref="home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
+    <button nav-direction="back" ui-sref="earlybird.home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
     <h1 class="title">earlybird</h1>
     <button ng-click="login()" class="button button-clear">Log In</button>
   </ion-header-bar>
 
   <ion-content scroll="false">
     <div class="list list-inset">
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="email">
       </label>
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="password">
       </label>
     </div>
