--- a/www/views/onboarding.html
+++ b/www/views/onboarding.html
@@ -1,6 +1,6 @@
 <div class="onboarding">
   <ion-header-bar class="bar-assertive">
-    <button nav-direction="back" ui-sref="home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
+    <button nav-direction="back" ui-sref="earlybird.home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
     <h1 class="title">earlybird</h1>
   </ion-header-bar>
 
@@ -18,7 +18,7 @@
     </ion-slide-box>
   </ion-content>
 
-  <ion-footer-bar nav-direction="forward" ui-sref="register" class="bar-stable" align-title="center">
+  <ion-footer-bar nav-direction="forward" ui-sref="earlybird.register" class="bar-stable" align-title="center">
     <div class="title">Register</div>
   </ion-footer-bar>
 </div>
