--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <button class="button button-clear" ng-click="addressModal.hide()">Cancel</button>
     <h1 class="title">Add Address</h1>
-    <button ng-disabled="newAddress.form.$invalid" class="button button-clear" ng-click="modal.hide()">Add</button>
+    <button ng-disabled="newAddress.form.$invalid" class="button button-clear" ng-click="createAddress(newAddress)">Add</button>
   </ion-header-bar>
 
   <ion-content scroll="false">
