--- a/www/views/register.html
+++ b/www/views/register.html
@@ -1,25 +1,25 @@
 <div class="register">
   <ion-header-bar class="bar-assertive">
-    <button nav-direction="back" ui-sref="onboarding" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
+    <button nav-direction="back" ui-sref="earlybird.onboarding" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
     <h1 class="title">earlybird</h1>
     <button ng-click="register()" class="button button-clear">Register</button>
   </ion-header-bar>
 
   <ion-content scroll="false">
     <div class="list list-inset">
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="first name">
       </label>
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="last name">
       </label>
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="phone number">
       </label>
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="password">
       </label>
-      <label class="item item-input">
+      <label class="item item-fixed item-input">
         <input type="text" placeholder="confirm password">
       </label>
     </div>
