feat(order): dynamically load items

--- a/www/views/order.html
+++ b/www/views/order.html
@@ -65,7 +65,7 @@
         <button ng-click="paymentModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
       </label>
 
-      <button class="button button-block button-balanced">Place Order: ${{order.quantity * 5}}</button>
+      <button class="button button-block button-balanced">Place Order: ${{order.quantity * items[0].price}}</button>
     </div>
   </ion-content>
 </div>
