--- a/www/views/register.html
+++ b/www/views/register.html
@@ -1,27 +1,30 @@
-<div class="register">
+<div class="register" ng-init="registerForm={}">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="earlybird.onboarding" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
     <h1 class="title">earlybird</h1>
-    <button ng-click="register()" class="button button-clear">Register</button>
+    <button ng-disabled="registerForm.form.$invalid" ng-click="register(registerForm.params)" class="button button-clear">Register</button>
   </ion-header-bar>
 
   <ion-content scroll="false">
-    <div class="list list-inset">
+    <form name="registerForm.form" class="list list-inset">
       <label class="item item-fixed item-input">
-        <input type="text" placeholder="first name">
+        <input type="text" required ng-model="registerForm.params.first_name" placeholder="first name">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" placeholder="last name">
+        <input type="text" required ng-model="registerForm.params.last_name" placeholder="last name">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" placeholder="phone number">
+        <input type="text" required ng-model="registerForm.params.email" placeholder="email">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" placeholder="password">
+        <input type="text" required ng-model="registerForm.params.phone" placeholder="phone number">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" placeholder="confirm password">
+        <input type="password" required ng-model="registerForm.params.password" placeholder="password">
       </label>
-    </div>
+      <!-- <label class="item item&#45;fixed item&#45;input"> -->
+      <!--   <input type="text" placeholder="confirm password"> -->
+      <!-- </label> -->
+    </form>
   </ion-content>
 </div>
