fix(header): simulator header ui fix

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -33,3 +33,11 @@ fieldset {
 div.item {
   line-height: 1.42857;
 }
+
+.bar .title, .bar .button {
+  margin-top: 20px;
+}
+
+.bar .header-switch {
+  margin-top: 0 !important;
+}
