--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7682,3 +7682,9 @@ fieldset {
 
 div.item {
   line-height: 1.42857; }
+
+.bar .title, .bar .button {
+  margin-top: 20px; }
+
+.bar .header-switch {
+  margin-top: 0 !important; }
