fix(forms): don't use inline inputs until ui bug is fixed

--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,4 +1,4 @@
-<div class="login" ng-init="loginForm={}">
+<div class="login" ng-cloak ng-init="loginForm={}">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="earlybird.home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
     <h1 class="title">earlybird</h1>
