--- a/www/views/partials/add-card.html
+++ b/www/views/partials/add-card.html
@@ -17,8 +17,13 @@
 
       <label class="item item-input">
         <input type="tel" required ng-model="newCard.params.cvv" placeholder="CVV">
+      </label>
+
+      <label class="item item-input">
         <input type="tel" size="2" required ng-model="newCard.params.exp_month" placeholder="MM">
-        <!-- <span> / </span> -->
+      </label>
+
+      <label class="item item-input">
         <input type="tel" size="4" required ng-model="newCard.params.exp_year" placeholder="YYYY">
       </label>
 
