--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -17,7 +17,13 @@
 
       <label class="item item-input">
         <input type="text" required ng-model="newAddress.city" placeholder="City">
+      </label>
+
+      <label class="item item-input">
         <input type="text" required ng-model="newAddress.state" placeholder="State">
+      </label>
+
+      <label class="item item-input">
         <input type="text" required ng-model"newAddress.zip" placeholder="Zip">
       </label>
     </form>
