feat(order): changed promo icon

--- a/www/views/order.html
+++ b/www/views/order.html
@@ -1,8 +1,11 @@
 <div class="order">
   <ion-header-bar class="bar-assertive">
-    <button ui-sref="earlybird.settings" nav-direction="back" class="button button-clear button-icon icon ion-ios-settings-strong"></button>
+    <button ui-sref="earlybird.settings" nav-direction="back" class="button button-clear button-icon icon ion-ios-settings">
+    </button>
     <h1 class="title">earlybird</h1>
-    <button ui-sref="earlybird.sharing" nav-direction="forward" class="button button-clear button-icon icon ion-ios-upload-outline"></button>
+    <button ui-sref="earlybird.sharing" nav-direction="forward" class="button button-clear button-icon icon">
+      <img src="img/ic-promocode-white2x.png"></img>
+    </button>
   </ion-header-bar>
 
   <ion-content scroll="true">
