feat(promotions): added redemption to registration and account

--- a/www/views/register.html
+++ b/www/views/register.html
@@ -22,9 +22,9 @@
       <label class="item item-fixed item-input">
         <input type="password" required ng-model="registerForm.params.password" placeholder="password">
       </label>
-      <!-- <label class="item item&#45;fixed item&#45;input"> -->
-      <!--   <input type="text" placeholder="confirm password"> -->
-      <!-- </label> -->
+      <label class="item item-fixed item-input">
+        <input type="text" ng-model="registerForm.params.code" placeholder="promo code">
+      </label>
     </form>
   </ion-content>
 </div>
