--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -24,7 +24,7 @@
       </label>
 
       <label class="item item-input">
-        <input type="text" required ng-model"newAddress.zip" placeholder="Zip">
+        <input type="text" required ng-model="newAddress.zip" placeholder="Zip">
       </label>
     </form>
   </ion-content>
