fix(style): set status bar to light content

--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,8 +1,9 @@
 <div class="home">
   <ion-content scroll="false">
-    <div class="home-text">
-      <h1>earlybird</h1>
-      <h2>coffee when you want it</h2>
+    <div class="home-text row-67">
+      <img src="img/img-logo-white.png"></img>
+    </div>
+    <div class="home-text row-33">
       <a nav-direction="forward" ui-sref="earlybird.login">Already have an account?</a>
     </div>
   </ion-content>
