--- a/www/views/settings.html
+++ b/www/views/settings.html
@@ -51,10 +51,10 @@
         <button class="button button-icon icon ion-ios-trash" ng-hide="inputDisabled" ng-click="deleteAddress(address, $index)"></button>
       </div>
 
-      <label class="order-add-address item item-button-right">
+      <div class="order-add-address item item-button-right">
         <div>Add Address</div>
         <button ng-click="addressModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
-      </label>
+      </div>
 
       <div class="item item-divider">
         Payments
@@ -73,10 +73,10 @@
         <button class="button button-icon icon ion-ios-trash" ng-hide="inputDisabled" ng-click="deleteCard(card, $index)"></button>
       </div>
 
-      <label class="order-add-card item item-button-right">
+      <div class="order-add-card item item-button-right">
         <div>Add Payment</div>
         <button ng-click="cardModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
-      </label>
+      </div>
 
       <div class="item item-divider">
         Promotions
