--- a/www/css/style.css
+++ b/www/css/style.css
@@ -33,7 +33,7 @@
 }
 
 .home .scroll-content {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('http://www.outerbanks.com/img//content/coffee-hero-01.jpg') no-repeat fixed;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../img/bg-coffee.png') no-repeat fixed;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
