--- a/www/views/home.html
+++ b/www/views/home.html
@@ -4,7 +4,7 @@
       <img src="img/img-logo-white.png"></img>
     </div>
     <div class="home-text row-33">
-      <a nav-direction="forward" ui-sref="earlybird.login">Already have an account?</a>
+      <a nav-direction="forward" ui-sref="earlybird.login">Already have an account? Tap to sign in.</a>
     </div>
   </ion-content>
 
