--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,7 +1,7 @@
 <div class="login" ng-cloak ng-init="loginForm={}">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="earlybird.home" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
-    <h1 class="title">earlybird</h1>
+    <h1 class="title"><img class="title-image" src="img/img-logo-white.png"></img></h1>
     <button ng-disabled="loginForm.form.$invalid" ng-click="login(loginForm.params)" class="button button-clear">Log In</button>
   </ion-header-bar>
 
