--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,7 +15,8 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-$assertive: #e15726 !default;
+$assertive: #E15726 !default;
+$balanced: #30c83e !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 
