--- a/www/views/order.html
+++ b/www/views/order.html
@@ -2,33 +2,34 @@
   <ion-header-bar class="bar-assertive">
     <button ui-sref="earlybird.settings" nav-direction="back" class="button button-clear button-icon icon ion-ios-settings">
     </button>
-    <h1 class="title">earlybird</h1>
+    <h1 class="title"><img class="title-image" src="img/img-logo-white.png"></img></h1>
     <button ui-sref="earlybird.sharing" nav-direction="forward" class="button button-clear button-icon icon">
       <img src="img/ic-promocode-white2x.png"></img>
     </button>
   </ion-header-bar>
 
   <ion-content scroll="true">
-    <div class="list card" ng-repeat="item in items">
-      <div class="item item-image">
-        <img ng-src="{{item.image}}"></img>
-      </div>
 
-      <div class="item">
-        <h2>{{item.title}}</h2>
-        <p>{{item.description}}</p>
-      </div>
-
-      <div class="order-quantity item item-fixed item-input">
-        <button ng-click="decQuantity()" ng-disabled="order.quantity<=0" class="button button-small button-icon icon ion-minus-circled"></button>
-        <div class="item-label-center">
-          Quantity: {{order.quantity}}
+    <form name="orderForm" class="list">
+      <div class="" ng-repeat="item in items">
+        <div class="item item-image">
+          <img ng-src="{{item.image}}"></img>
         </div>
-        <button ng-click="incQuantity()" class="button button-icon icon ion-plus-circled"></button>
-      </div>
-    </div>
 
-    <form name="orderForm" class="list list-inset">
+        <div class="item item-description">
+          <h2>{{item.title}}</h2>
+          <p>{{item.description}}</p>
+        </div>
+
+        <div class="order-quantity item item-fixed item-input">
+          <button ng-click="decQuantity()" ng-disabled="order.quantity<=1" class="button button-small button-icon icon ion-ios-minus-outline"></button>
+          <div class="item-label-center">
+            Quantity: {{order.quantity}}
+          </div>
+          <button ng-click="incQuantity()" class="button button-icon icon ion-ios-plus-outline"></button>
+        </div>
+      </div>
+
       <div class="item item-divider">
         Destination
       </div>
@@ -37,8 +38,8 @@
         <input type="radio" ng-value="address.id" required ng-model="order.destination_address_id">
         <h2>{{address.title}}</h2>
         <p>{{address.street1}} {{' ' + address.street2}}, {{address.city}}, {{address.state}} {{address.zip}}</p>
-        <i class="radio-icon ion-checkmark-circled"></i>
-        <i class="radio-icon ion-checkmark-circled button-opaque"></i>
+        <i class="radio-icon ion-ios-checkmark"></i>
+        <i class="radio-icon ion-ios-checkmark-outline button-opaque"></i>
       </label>
 
       <div class="order-add-address item item-button-right">
@@ -57,8 +58,8 @@
         <input type="radio" ng-value="card.id" required ng-model="order.card_id">
         <h2>{{card.title}}</h2>
         <p>{{card.last_four}}</p>
-        <i class="radio-icon ion-checkmark-circled"></i>
-        <i class="radio-icon ion-checkmark-circled button-opaque"></i>
+        <i class="radio-icon ion-ios-checkmark"></i>
+        <i class="radio-icon ion-ios-checkmark-outline button-opaque"></i>
       </label>
 
       <div class="order-add-card item item-button-right">
@@ -68,7 +69,7 @@
         <button ng-click="cardModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
       </div>
 
-      <button ng-show="availability.now()" ng-disabled="!orderValid(order)" class="button button-block button-balanced" ng-click="createOrder(order)">Place Order: ${{order.quantity * items[0].price}}</button>
+      <button ng-show="availability.now()" ng-disabled="!orderValid(order)" class="order-button button button-block button-balanced" ng-click="createOrder(order)">Place Order: ${{order.quantity * items[0].price}}</button>
       <button ng-hide="availability.now()" ng-disabled="true" class="button button-block button-balanced">We're closed until {{availability.next_open.start_time | date : 'EEEE @ H:mm a'}}</button>
     </form>
   </ion-content>
