--- a/www/views/register.html
+++ b/www/views/register.html
@@ -1,7 +1,7 @@
 <div class="register" ng-init="registerForm={}">
   <ion-header-bar class="bar-assertive">
     <button nav-direction="back" ui-sref="earlybird.onboarding" class="button button-clear button-icon icon ion-ios-arrow-back"> Back</button>
-    <h1 class="title">earlybird</h1>
+    <h1 class="title"><img class="title-image" src="img/img-logo-white.png"></img></h1>
     <button ng-disabled="registerForm.form.$invalid" ng-click="register(registerForm.params)" class="button button-clear">Register</button>
   </ion-header-bar>
 
