--- a/www/views/settings.html
+++ b/www/views/settings.html
@@ -14,7 +14,7 @@
   </ion-header-bar>
 
   <ion-content scroll="true">
-    <div class="list list-inset">
+    <div class="list">
       <div class="item item-divider">
         General
       </div>
@@ -48,7 +48,7 @@
       <div class="item item-fixed item-button-right" ng-repeat="address in currentUser.addresses">
         <h2>{{address.title}}</h2>
         <p>{{address.street1}} {{' ' + address.street2}}, {{address.city}}, {{address.state}} {{address.zip}}</p>
-        <button class="button button-icon icon ion-ios-trash" ng-hide="inputDisabled" ng-click="deleteAddress(address, $index)"></button>
+        <button class="button button-icon icon ion-ios-trash-outline" ng-hide="inputDisabled" ng-click="deleteAddress(address, $index)"></button>
       </div>
 
       <div class="order-add-address item item-button-right">
@@ -70,7 +70,7 @@
         <img ng-src="img/ic-payment-{{card.type}}2x.png"></img>
         <h2>{{card.title}}</h2>
         <p>{{card.last_four}}</p>
-        <button class="button button-icon icon ion-ios-trash" ng-hide="inputDisabled" ng-click="deleteCard(card, $index)"></button>
+        <button class="button button-icon icon ion-ios-trash-outline" ng-hide="inputDisabled" ng-click="deleteCard(card, $index)"></button>
       </div>
 
       <div class="order-add-card item item-button-right">
@@ -89,7 +89,7 @@
         <button class="button button-positive button-small" ng-click="redeemPromo(inputs.code)">Apply</button>
       </div>
 
-      <button class="button button-block" ng-click="logout()">Logout</button>
+      <button class="button button-block button-light" ng-click="logout()">Logout</button>
     </div>
   </ion-content>
 </div>
