--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,14 +1,15 @@
 <div class="home">
   <ion-content scroll="false">
-    <div class="home-text row-67">
+    <div class="home-text row-50">
       <img src="img/img-logo-white.png"></img>
     </div>
-    <div class="home-text row-33">
-      <a nav-direction="forward" ui-sref="earlybird.login">Already have an account? Tap to sign in.</a>
+    <div class="home-text row-50">
+      <button class="button button-clear button-light" nav-direction="forward" ui-sref="earlybird.login">
+        Sign In
+      </button>
+      <button class="button button-light" nav-direction="forward" ui-sref="earlybird.register">
+        Sign Up
+      </button>
     </div>
   </ion-content>
-
-  <ion-footer-bar nav-direction="forward" ui-sref="earlybird.onboarding" class="bar-assertive" align-title="center">
-    <div class="title">Get Started</div>
-  </ion-footer-bar>
 </div>
